<?xml version="1.0"?>
<package format="2">
  <name>iidc_camera</name>
  <version>1.1.4</version>
  <description>The iidc_camera is a package that enables interfacing IIDC cameras from ROS</description>

  <author>Toshio UESHIBA</author>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/iidc_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>

  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>

</package>
